--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_general.schema.yml
@@ -74,14 +74,9 @@ keys:
                 content:
                   type: str
                   description: |-
-                    Content of route control function. Write 'EOF' below the content.
+                    Content of route control function.
                     e.g.
                     function ACCEPT_ALL() {
                       return true;
                       }
                     EOF
-          compile:
-            type: bool
-            required: true
-          commit:
-            type: bool
