--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -59,6 +59,7 @@ all:
         connected-endpoints-wrong-profile-lacp-fallback:
         connected-endpoints-phone-vlan-mode:
         connected-endpoints-phone-vlan-vlans:
+        connected-endpoints-monitor-sessions-mismatch-direction:
         duplicate-vlans-l2vlans:
         duplicate-vlans-svi-id:
         duplicate-vrfs-duplicate-svi-name-conflict:
