--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -89,7 +89,9 @@ keys:
                           - "seconds"
                   apply_alternate:
                     type: bool
-                    description: Apply alternate action if primary action fails.
+                    description: |-
+                      Apply alternate action if primary action fails.
+                      eg. aaa unresponsive action apply cached-results else traffic allow
                   traffic_allow:
                     type: bool
                     description: Set action for supplicant traffic when AAA times out.
@@ -97,6 +99,8 @@ keys:
                     type: int
                     convert_types:
                       - str
+                    min: 1
+                    max: 4094
               phone_action:
                 type: dict
                 description: Set action for supplicant when AAA times out.
@@ -128,7 +132,9 @@ keys:
                           - "seconds"
                   apply_alternate:
                     type: bool
-                    description: Apply alternate action if primary action fails.
+                    description: |-
+                      Apply alternate action if primary action fails.
+                      eg. aaa unresponsive phone action apply cached-results else traffic allow
                   traffic_allow:
                     description: Set action for supplicant traffic when AAA times out.
                     type: bool
