Updating test-case

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/default_interface_mtu_platform.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/default_interface_mtu_platform.cfg
@@ -11,8 +11,7 @@ service routing protocols model multi-agent
 !
 hostname default_interface_mtu_platform
 !
-platform sand lag hardware-only
-platform sand lag mode 512x32
+platform sfe data-plane cpu allocation maximum 42
 !
 no enable password
 no aaa root
