--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/default_interface_mtu_platform.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/default_interface_mtu_platform.yml
@@ -10,7 +10,5 @@ platform_settings:
   - platforms: [ default ]
     default_interface_mtu: 1234
     structured_config:
-      sand:
-        lag:
-          hardware_only: true
-          mode: "512x32"
+      sfe:
+        data_plane_cpu_allocation_max: 42
