--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2611,6 +2611,8 @@ keys:
             configuration.
         security_entropy_source:
           type: str
+          description: Entropy source improves the randomness of the numbers used
+            to generate MACsec's cryptographic keys.
     default:
     - platforms:
       - default
