--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -98,6 +98,7 @@ keys:
           description: EOS CLI rendered directly on the root level of the final EOS configuration.
         security_entropy_source:
           type: str
+          description: Entropy source improves the randomness of the numbers used to generate MACsec's cryptographic keys.
     default:
       - platforms:
           - default
