--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
@@ -9,15 +9,16 @@ policy_maps:
             drop_precedence: 1
           police:
             rate:
-              lower_rate: 10
-              lower_rate_unit: kbps
-              lower_rate_burst_size: 260
-              lower_rate_burst_size_unit: kbytes
+              rate: 10
+              rate_unit: kbps
+              rate_burst_size: 260
+              rate_burst_size_unit: kbytes
               higher_rate: 30
               higher_rate_unit: kbps
               higher_rate_burst_size: 270
               higher_rate_burst_size_unit: kbytes
-              action: drop-precedence
+              action:
+                type: drop-precedence
         - name: CM_REPLICATION_LD_2
           set:
             dscp: af11
@@ -30,12 +31,15 @@ policy_maps:
             cos: 4
           police:
             rate:
-              lower_rate: 30
-              lower_rate_unit: kbps
-              lower_rate_burst_size: 280
+              rate: 30
+              rate_unit: kbps
+              rate_burst_size: 280
               higher_rate: 1
               higher_rate_unit: mbps
               higher_rate_burst_size: 270
+              action:
+                type: dscp
+                dscp_value: af11
     - name: PM_REPLICATION_LD3
       classes:
         - name: CM_REPLICATION_LD
@@ -44,9 +48,9 @@ policy_maps:
             cos: 6
           police:
             rate:
-              lower_rate: 10000
-              lower_rate_burst_size: 260
-              lower_rate_burst_size_unit: kbytes
+              rate: 10000
+              rate_burst_size: 260
+              rate_burst_size_unit: kbytes
   pbr:
     - name: PM_PBR_BREAKOUT
       classes:
