--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_service_insertion.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_service_insertion.schema.yml
@@ -8,7 +8,46 @@ type: dict
 keys:
   router_service_insertion:
     type: dict
-    description: Configure network services inserted to data forwarding
+    description: Configure network services inserted to data forwarding.
     keys:
       enabled:
         type: bool
+      connections:
+        type: list
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+              description: Connection name.
+            ethernet_interface:
+              type: dict
+              description: |-
+                Outgoing physical interface or subinterface to use for the connection.
+                If both `ethernet_interface` and `tunnel_interface` are configured, `ethernet_interface` will be used.
+              keys:
+                name:
+                  type: str
+                  required: true
+                  description: e.g. Ethernet2 or Ethernet2/2.2
+                next_hop:
+                  type: str
+                  required: true
+                  description: Next-hop IPv4 address (without mask).
+            tunnel_interface:
+              type: dict
+              description: |-
+                Outgoing tunnel interface(s) to use for this connection.
+                If both `ethernet_interface` and `tunnel_interface` are configured, `ethernet_interface` will be used.
+              keys:
+                primary:
+                  type: str
+                  description: e.g. Tunnel2
+                secondary:
+                  type: str
+                  description: e.g. Tunnel3
+            monitor_connectivity_host:
+              type: str
+              description: |-
+                Name of the host defined under `monitor_connectivity.hosts` used to derive the health of the connection.
