--- a/.github/workflows/offline-links-check.yml
+++ b/.github/workflows/offline-links-check.yml
@@ -15,6 +15,7 @@ concurrency:
 jobs:
   offline_link_check:
     name: 'Validate mkdoc content'
+    if: github.repository == 'aristanetworks/avd'
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
