--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/aaa_accounting.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/aaa_accounting.schema.yml
@@ -70,7 +70,7 @@ keys:
                   type: str
                   convert_types:
                   - int
-                  description: "Privelege level 'all' or 0-15"
+                  description: "Privilege level 'all' or 0-15"
                 type:
                   type: str
                   valid_values: ["none", "start-stop", "stop-only"]
@@ -88,7 +88,7 @@ keys:
                   type: str
                   convert_types:
                   - int
-                  description: "Privelege level 'all' or 0-15"
+                  description: "Privilege level 'all' or 0-15"
                 type:
                   type: str
                   valid_values: ["none", "start-stop", "stop-only"]
