--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/daemon_terminattr.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/daemon_terminattr.schema.yml
@@ -89,11 +89,11 @@ keys:
             cvsourceip:
               type: str
               description: |
-                Set source IP address in case of in-band managament
+                Set source IP address in case of in-band management
             cvsourceintf:
               type: str
               description: |
-                Set source interface in case of in-band managament. Available as of TerminAttr v1.23.0.
+                Set source interface in case of in-band management. Available as of TerminAttr v1.23.0.
                 The interface name is case sensitive and has to match the interface name in the running-config, e.g.:Vlan100.
             cvvrf:
               type: str
@@ -143,11 +143,11 @@ keys:
       cvsourceip:
         type: str
         description: |
-          Set source IP address in case of in-band managament
+          Set source IP address in case of in-band management
       cvsourceintf:
         type: str
         description: |
-          Set source interface in case of in-band managament.
+          Set source interface in case of in-band management.
           The interface name is case sensitive and has to match the interface name in the running-config, e.g.:Vlan100.
       cvvrf:
         type: str
