--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/qos_profiles.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/qos_profiles.schema.yml
@@ -145,7 +145,7 @@ keys:
                             required: false
                             min: 0
                             max: 2
-                            description: Specify Drop Precendence value
+                            description: Specify Drop Precedence value
                           min:
                             type: int
                             required: true
@@ -274,7 +274,7 @@ keys:
                             required: false
                             min: 0
                             max: 2
-                            description: Specify Drop Precendence value
+                            description: Specify Drop Precedence value
                           min:
                             type: int
                             required: true
