--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_path_selection.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_path_selection.schema.yml
@@ -38,7 +38,7 @@ keys:
               type: str
               valid_values:
                 - lan
-              description: Flow assignement `lan` can not be configured in a path group with dynamic peers.
+              description: Flow assignment `lan` can not be configured in a path group with dynamic peers.
             local_interfaces:
               type: list
               primary_key: name
@@ -87,7 +87,7 @@ keys:
                           type: str
             dynamic_peers:
               type: dict
-              description: Flow assignement `lan` can not be configured in a path group with dynamic peers.
+              description: Flow assignment `lan` can not be configured in a path group with dynamic peers.
               keys:
                 enabled:
                   type: bool
