--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -633,7 +633,7 @@ keys:
                   the site ID must be unique within a region.'
               location:
                 type: str
-                description: Location as a sring is resolved on Cloudvision.
+                description: Location as a string is resolved on Cloudvision.
               site_contact:
                 type: str
               site_after_hours_contact:
@@ -770,7 +770,7 @@ keys:
     - str
     description: 'Default interface MTU configured on EOS under "interface defaults".
 
-      Can be overriden per platform under platform settings.
+      Can be overridden per platform under platform settings.
 
       '
     min: 68
@@ -1117,7 +1117,7 @@ keys:
             define it.\nrt_override will default to vni_override if set.\n\nrt_override
             supports two formats:\n  - A single number which will be used in the RT
             fields instead of mac_vrf_id/mac_vrf_vni (see 'overlay_rt_type' for details).\n
-            \ - A full RT string with colon seperator which will override the full
+            \ - A full RT string with colon separator which will override the full
             RT.\n"
         rd_override:
           type: str
@@ -1129,7 +1129,7 @@ keys:
             set.\n\nrd_override supports two formats:\n  - A single number which will
             be used in the RD assigned number field instead of mac_vrf_id/mac_vrf_vni
             (see 'overlay_rd_type' for details).\n  - A full RD string with colon
-            seperator which will override the full RD.\n"
+            separator which will override the full RD.\n"
         evpn_l2_multi_domain:
           type: bool
           description: 'Explicitly extend VLAN-Aware Bundle to remote EVPN domains.
@@ -4195,7 +4195,7 @@ $defs:
         type: str
         description: 'By default the description is built leveraging `<peer>_<peer_interface>`.
 
-          When set this key will overide the default value on the physical ports.
+          When set this key will override the default value on the physical ports.
 
           '
       profile:
@@ -5368,7 +5368,7 @@ $defs:
                   this value and statically define it.\n\nrd_override supports two
                   formats:\n  - A single number will be used in the RD assigned number
                   subfield (second part of the RD).\n  - A full RD string with colon
-                  seperator which will override the full RD.\n"
+                  separator which will override the full RD.\n"
               rt_override:
                 type: str
                 convert_types:
@@ -5378,7 +5378,7 @@ $defs:
                   this value and statically define it.\n\nrt_override supports two
                   formats:\n  - A single number will be used in the RT assigned number
                   subfield (second part of the RT).\n  - A full RT string with colon
-                  seperator which will override the full RT.\n"
+                  separator which will override the full RT.\n"
               mlag_ibgp_peering_ipv4_pool:
                 type: str
                 description: 'IPv4_address/Mask
@@ -6295,7 +6295,7 @@ $defs:
                   if set.\n\nrt_override supports two formats:\n  - A single number
                   which will be used in the RT fields instead of mac_vrf_id/mac_vrf_vni
                   (see 'overlay_rt_type' for details).\n  - A full RT string with
-                  colon seperator which will override the full RT.\n"
+                  colon separator which will override the full RT.\n"
               rd_override:
                 type: str
                 convert_types:
@@ -6306,7 +6306,7 @@ $defs:
                   vni_override if set.\n\nrd_override supports two formats:\n  - A
                   single number which will be used in the RD assigned number field
                   instead of mac_vrf_id/mac_vrf_vni (see 'overlay_rd_type' for details).\n
-                  \ - A full RD string with colon seperator which will override the
+                  \ - A full RD string with colon separator which will override the
                   full RD.\n"
               name:
                 type: str
@@ -8662,7 +8662,7 @@ $defs:
           define it.\nrt_override will default to vni_override if set.\n\nrt_override
           supports two formats:\n  - A single number which will be used in the RT
           fields instead of mac_vrf_id/mac_vrf_vni (see 'overlay_rt_type' for details).\n
-          \ - A full RT string with colon seperator which will override the full RT.\n"
+          \ - A full RT string with colon separator which will override the full RT.\n"
       rd_override:
         type: str
         convert_types:
@@ -8672,7 +8672,7 @@ $defs:
           define it.\nrd_override will default to rt_override or vni_override if set.\n\nrd_override
           supports two formats:\n  - A single number which will be used in the RD
           assigned number field instead of mac_vrf_id/mac_vrf_vni (see 'overlay_rd_type'
-          for details).\n  - A full RD string with colon seperator which will override
+          for details).\n  - A full RD string with colon separator which will override
           the full RD.\n"
       trunk_groups:
         type: list
