Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/platform_settings.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/platform_settings.cfg
@@ -2,19 +2,20 @@
 !
 vlan internal order ascending range 1006 1199
 !
-interface defaults
-   mtu 1234
-!
 transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname default_interface_mtu_platform
+hostname platform_settings
 !
 no enable password
 no aaa root
 !
 vrf instance MGMT
+!
+interface Ethernet12
+   description Interface Created from platform_settings.structured_config
+   switchport
 no ip routing vrf MGMT
 !
 management api http-commands
