--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -37,6 +37,7 @@ all:
             spanning-tree-mode-rapid-pvst:
             node-type-l3-interfaces:
             ipv4-acls:
+            platform_settings:
         OVERRIDE_UPLINK_TYPE:
           hosts:
             override_uplink_type-d:
