--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/platform_settings.yml
@@ -1,4 +1,4 @@
-hostname: default_interface_mtu_platform
+hostname: platform_settings
 is_deployed: true
 service_routing_protocols_model: multi-agent
 vlan_internal_order:
@@ -6,8 +6,6 @@ vlan_internal_order:
   range:
     beginning: 1006
     ending: 1199
-interface_defaults:
-  mtu: 1234
 vrfs:
 - name: MGMT
   ip_routing: false
@@ -17,3 +15,6 @@ management_api_http:
   enable_https: true
 ip_igmp_snooping:
   globally_enabled: true
+ethernet_interfaces:
+- name: Ethernet12
+  description: Interface Created from platform_settings.structured_config
