--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -87,12 +87,15 @@ keys:
         management_interface:
           type: str
           default: Management1
+        structured_config:
+          type: dict
+          documentation_options:
+            hide_keys: true
+          description: Custom structured config for eos_cli_config_gen.
+          $ref: "eos_cli_config_gen#/"
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the root level of the final EOS configuration.
-        structured_config:
-          type: dict
-          description: Custom structured config for eos_cli_config_gen.
     default:
       - platforms:
           - default
