l2vlan and svi with evpn_vlanbundle defined disregard the common option evpn_vlan_aware_bundles

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -30,6 +30,7 @@ all:
             default_overlay_protocol_cvx:
             default_overlay_protocol_her:
             evpn_vlan_bundle:
+            evpn_vlan_bundle_svi_l2vlan:
             default_interface_mtu_hostvars:
             default_interface_mtu_platform:
             evpn-to-ipvpn-gateway:
