--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -5694,8 +5694,8 @@ $defs:
                       description: 'Name of a bundle defined under ''evpn_vlan_bundles''
                         to inherit configuration.
 
-                        To use this option the common "evpn_vlan_aware_bundles" option
-                        must be set to true.
+                        The the common option "evpn_vlan_aware_bundles" is disregarded
+                        for this option.
 
                         '
                     nodes:
@@ -6320,8 +6320,8 @@ $defs:
                 description: 'Name of a bundle defined under ''evpn_vlan_bundles''
                   to inherit configuration.
 
-                  To use this option the common "evpn_vlan_aware_bundles" option must
-                  be set to true.
+                  The the common option "evpn_vlan_aware_bundles" is disregarded for
+                  this option.
 
                   '
               trunk_groups:
