--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-custom-control-plane-policy-edge-2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-custom-control-plane-policy-edge-2.yml
@@ -1,6 +1,6 @@
 ---
 # Testing CV pathfinder edge with custom control plane policy to make sure the correct
-# control plane policy can be overriden.
+# control plane policy can be overridden.
 # Also override the application profile name, but don't define it, so that
 # application profile name is custom but application is still auto generated
 
