--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/arp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/arp.cfg
@@ -14,10 +14,10 @@ interface Management1
 !
 arp aging timeout default 300
 arp vrf BLAH 42.42.42.42 DEAD.BEEF.CAFE arpa
-arp vrf defauls 42.42.42.42 DEAD.BEEF.CAFE arpa
 arp 41.42.42.42 DEAD.BEEF.CAFE arpa
 arp 42.42.42.42 DEAD.BEEF.CAFE arpa
 arp 43.42.42.42 DEAD.BEEF.CAFE arpa
+arp vrf defaults 42.42.42.42 DEAD.BEEF.CAFE arpa
 arp vrf defaulu 42.42.42.42 DEAD.BEEF.CAFE arpa
 !
 end
