Refactor: Revert sorting on exit-groups in policy

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-internet-exit.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-internet-exit.cfg
@@ -22,10 +22,11 @@ router internet-exit
         local connection eg_04_lo_03
     !
     policy po_01
-        exit-group po_eg_01_01
         exit-group po_eg_01_02
-        exit-group po_eg_01_03
         exit-group po_eg_01_04
+        exit-group po_eg_01_01
+        exit-group po_eg_01_03
+        exit-group system-default-exit-group
     !
     policy po_02
     !
